* Updated to use "lombok.val" type interface