@@ -8,7 +8,7 @@ import com.authbox.web.model.CreateAccountRequest;
 import com.authbox.web.model.DeleteAccountsRequest;
 import com.authbox.web.model.PasswordChangeRequest;
 import com.authbox.web.model.UpdateUserRequest;
-import com.google.common.collect.ImmutableList;
+import jakarta.transaction.Transactional;
 import lombok.AllArgsConstructor;
 import lombok.val;
 import org.springframework.data.domain.Page;
@@ -25,9 +25,9 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 
-import jakarta.transaction.Transactional;
 import java.time.Clock;
 import java.time.Instant;
+import java.util.List;
 import java.util.Optional;
 
 import static java.util.UUID.randomUUID;
@@ -51,7 +51,7 @@ public class AccountController extends BaseController {
     @PreAuthorize("hasRole('USER') || hasRole('ADMIN')")
     @Transactional
     public User updateCurrentAccount(@RequestBody final UpdateUserRequest updatedUser) {
-        final User user = getCurrentUser();
+        val user = getCurrentUser();
         userDao.update(user.getId(), user.getUsername(), updatedUser.getName(), user.getPassword(), updatedUser.isEnabled(), Instant.now(defaultClock));
         return userDao.getById(user.getId()).orElseThrow(() -> new BadRequestException("User not found by id: " + user.getId()));
     }
@@ -60,7 +60,7 @@ public class AccountController extends BaseController {
     @PreAuthorize("hasRole('USER') || hasRole('ADMIN')")
     @Transactional
     public User updateCurrentAccountPassword(@RequestBody final PasswordChangeRequest passwordChangeRequest) {
-        final User user = getCurrentUser();
+        val user = getCurrentUser();
         // verify new password min length
         if (isEmpty(passwordChangeRequest.oldPassword)) {
             throw new BadRequestException("Old password can not be empty");
@@ -93,15 +93,15 @@ public class AccountController extends BaseController {
     @PreAuthorize("hasRole('ADMIN')")
     public Page<User> listAccounts(@RequestParam(value = "pageSize", defaultValue = "10") final int pageSize,
                                    @RequestParam(value = "currentPage", defaultValue = "0") final int currentPage) {
-        final User adminUser = getCurrentUserVerifyAdmin();
+        val adminUser = getCurrentUserVerifyAdmin();
         return userDao.listByOrganizationId(adminUser.getOrganizationId(), PageRequest.of(currentPage, pageSize));
     }
 
     @GetMapping("/{id}")
     @PreAuthorize("hasRole('ADMIN')")
     public User getAccount(@PathVariable("id") final String id) {
-        final User adminUser = getCurrentUserVerifyAdmin();
-        final Optional<User> foundUser = userDao.getById(id);
+        val adminUser = getCurrentUserVerifyAdmin();
+        val foundUser = userDao.getById(id);
         if (foundUser.isEmpty()) {
             throw new BadRequestException("Account not found by id: " + id);
         }
@@ -114,7 +114,7 @@ public class AccountController extends BaseController {
     @PostMapping("/create")
     @PreAuthorize("hasRole('ADMIN')")
     public User createAccountForOrganization(@RequestBody final CreateAccountRequest request) {
-        final User adminUser = getCurrentUserVerifyAdmin();
+        val adminUser = getCurrentUserVerifyAdmin();
         if (isEmpty(request.username)) {
             throw new BadRequestException("Account username can not be empty");
         }
@@ -127,8 +127,8 @@ public class AccountController extends BaseController {
         if (userDao.getByUsername(request.username.trim()).isPresent()) {
             throw new BadRequestException("This username is taken, please select another user");
         }
-        final String userId = randomUUID().toString();
-        final Instant now = Instant.now(defaultClock);
+        val userId = randomUUID().toString();
+        val now = Instant.now(defaultClock);
 
         val password = (isEmpty(request.password) ?
                 passwordEncoder.encode(randomUUID().toString())
@@ -141,7 +141,7 @@ public class AccountController extends BaseController {
                         request.username.trim(),
                         password,
                         request.name.trim(),
-                        ImmutableList.of(request.role.name()),
+                        List.of(request.role.name()),
                         true,
                         adminUser.getOrganizationId(),
                         now
@@ -156,8 +156,8 @@ public class AccountController extends BaseController {
     @Transactional
     public ResponseEntity<String> updateAccount(@PathVariable("id") final String id,
                                                 @RequestBody final UpdateUserRequest updatedUser) {
-        final User adminUser = getCurrentUserVerifyAdmin();
-        final Optional<User> user = userDao.getById(updatedUser.getId());
+        val adminUser = getCurrentUserVerifyAdmin();
+        val user = userDao.getById(updatedUser.getId());
         if (user.isEmpty()) {
             throw new BadRequestException("User not found by id: " + id);
         }
@@ -200,7 +200,7 @@ public class AccountController extends BaseController {
     @DeleteMapping
     @PreAuthorize("hasRole('ADMIN')")
     public ResponseEntity<String> deleteAccounts(@RequestBody final DeleteAccountsRequest request) {
-        final User adminUser = getCurrentUserVerifyAdmin();
+        val adminUser = getCurrentUserVerifyAdmin();
         request.accountIds.stream().parallel().forEach(accountId -> {
             final Optional<User> foundUser = userDao.getById(accountId);
             if (foundUser.isEmpty()) {
