@@ -1,8 +1,7 @@
 package com.authbox.web.controller;
 
 import com.authbox.base.config.AppProperties;
-import com.authbox.base.model.Organization;
-import com.google.common.collect.ImmutableMap;
+import lombok.val;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Import;
 import org.springframework.security.access.prepost.PreAuthorize;
@@ -11,6 +10,8 @@ import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.servlet.ModelAndView;
+
+import java.util.Map;
 
 @Controller
 @Import(AppProperties.class)
@@ -43,18 +44,18 @@ public class DefaultController extends BaseController {
     @GetMapping({"/secure/"})
     @PreAuthorize("isAuthenticated()")
     public ModelAndView secureIndexPage() {
-        final Organization organization = getOrganization();
+        val organization = getOrganization();
         return createModelAndView("secure/index");
     }
 
     @GetMapping("/secure/{securePageName}.html")
     @PreAuthorize("isAuthenticated()")
     public ModelAndView secureOrganization(@PathVariable("securePageName") final String securePageName) {
-        final Organization organization = getOrganization();
+        val organization = getOrganization();
         return createModelAndView("secure/" + securePageName);
     }
 
     private ModelAndView createModelAndView(final String view) {
-        return new ModelAndView(view, ImmutableMap.of("appProperties", appProperties));
+        return new ModelAndView(view, Map.of("appProperties", appProperties));
     }
 }
